--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ionic Conference",
-  "short_name": "Ionic Conference",
+  "name": "Provkörning",
+  "short_name": "Provkörning",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
